# ats2-spookyhash

./: Makefile.am  Makefile.in  README  aclocal.m4  aminclude_static.am  ats2-spookyhash.pc.in  configure  configure.ac  list-ats-dependencies.dats.in  make-ats-depends.dats.in  spookyhash.pc.in
reference-implementation/: README
spookyhash/: spookyhash-incremental.c  spookyhash.h  spookyhash_hash128.c  spookyhash_hash32.c  spookyhash_hash64.c
spookyhash/CATS/: spookyhash-implementation.cats  spookyhash.cats
spookyhash/DATS/: array_prf.dats  spookyhash-incremental.dats  spookyhash-proofs.dats  spookyhash.dats  spookyhash_hash128.dats  spookyhash_hash32.dats  spookyhash_hash64.dats
spookyhash/DATS/include/: spookyhash-byte-order.inc  spookyhash-common.inc  spookyhash-templates.inc
spookyhash/HATS/: spookyhash-ats-parameters.hats  spookyhash-parameters.hats
spookyhash/SATS/: array_prf.sats  spookyhash-alignment.sats  spookyhash-arithmetic.sats  spookyhash-byte-order.sats  spookyhash-casts.sats  spookyhash-internal-types.sats  spookyhash-mem.sats  spookyhash-proofs.sats  spookyhash-templates.sats  spookyhash.sats
tests/: compute-reference-for-hash128-seed.sh.in  compute-reference-for-hash32-seed.sh.in  compute-reference-for-hash64-seed.sh.in  compute-reference-for-seeds-eq-zero.sh.in  compute-reference-result.cpp  test-spookyhash-for-hash128-seed.sh.in  test-spookyhash-for-hash32-seed.sh.in  test-spookyhash-for-hash64-seed.sh.in  test-spookyhash-for-seeds-eq-zero.sh.in  test-spookyhash-incremental-for-seeds-eq-zero.sh.in  test-spookyhash-incremental.sh.in  test-spookyhash.sh.in  test-spookyhash_hash128-for-seeds-eq-zero.sh.in  test-spookyhash_hash128-misaligned-for-seeds-eq-zero.sh.in  test-spookyhash_hash128-misaligned.sh.in  test-spookyhash_hash128.sh.in  test-spookyhash_hash32-for-seeds-eq-zero.sh.in  test-spookyhash_hash32.sh.in  test-spookyhash_hash64-for-seeds-eq-zero.sh.in  test-spookyhash_hash64.sh.in  try-spookyhash-common-c.h  try-spookyhash-common.hats  try-spookyhash-incremental-c.c  try-spookyhash-incremental.dats  try-spookyhash_hash128-c-misaligned.c  try-spookyhash_hash128-c.c  try-spookyhash_hash128-misaligned.dats  try-spookyhash_hash128.dats  try-spookyhash_hash32-c.c  try-spookyhash_hash32.dats  try-spookyhash_hash64-c.c  try-spookyhash_hash64.dats
